# SNP-Python

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: introduction.md
examples/: paper_examples.py
snpreg/: __init__.py  dgcv.py  kernels.py  metrics.py  runtime.py  snp.py
snpreg/datasets/: __init__.py
snpreg/experiments/: __init__.py  mixture.py  realdata_1d.py  realdata_2d.py  runtime.py
src/pysnp.egg-info/: PKG-INFO
src/snp/: __init__.py  core.py  dgcv.py  utils.py
tests/: test_snp.py
