[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snp"
version = "0.1.0"
description = "Stepwise Noise Peeling for Nadaraya-Watson Regression"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = [
    "nadaraya-watson",
    "kernel-regression", 
    "smoothing",
    "bandwidth-selection",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme",
    "myst-parser",
]
examples = [
    "jupyter",
    "seaborn",
    "pandas",
    "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/yourusername/snp"
Documentation = "https://snp.readthedocs.io/"
Repository = "https://github.com/yourusername/snp.git"
Issues = "https://github.com/yourusername/snp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/snp"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--cov=snp",
    "--cov-report=html",
    "--cov-report=term-missing",
]