[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "snpreg"
version = "1.0.0"
description = "Stepwise Noise Peeling for Nonparametric Regression"
readme = "README.md"
authors = [
    {name = "Bistoon Hosseini", email = "bistoon.hosseini@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["nonparametric regression", "kernel smoothing", "nadaraya-watson", "bandwidth selection"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[project.urls]
Homepage = "https://github.com/bistoonh/SNP-Python"
Repository = "https://github.com/bistoonh/SNP-Python"
Documentation = "https://github.com/bistoonh/SNP-Python#readme"
"Bug Tracker" = "https://github.com/bistoonh/SNP-Python/issues"

[tool.setuptools]
packages = ["snpreg"]

[tool.setuptools.package-data]
snpreg = ["py.typed", "datasets/*.csv"]
